alignment issues

--- a/app/styles/_admin-dashboard.scss
+++ b/app/styles/_admin-dashboard.scss
@@ -1084,6 +1084,18 @@ input[type=radio], input.radio {
 ul.dropdown-menu {
   margin-bottom: 20%;
 }
+.margin-left-10{
+  margin-left:-20px;
+}
+.ellipes{
+  height:40px;
+  overflow:hidden;
+   white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.height65{
+  height:65px;
+}
 .col-hide-web{
     display: none;
   }
